# tkhn_ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
src/: character.py  enemies.py  gamedisplay.py  index.py  sound.py  spritesheet.py  tiles.py  world.py
src/assets/temp/: level1.csv  map.tmx  texturepack.json  texturepack.tsx
